# haskell-sudoku

./: .travis.yml  ChangeLog.md  LICENSE  README.md  Sudoku.cabal  cabal.project  sudoku.cabal
app/: sudoku-solver.hs
src/: Sudoku.hs  sudoku-solver.hs
test/: Test 1 - Solved puzzle.hs  Test 2 - Simple.hs  Test 3 - Not solvable.hs  Test 4 - Hard puzzle.hs  Test 5 - IO and format.hs  solver test4  solver test4.sol  solver test5  solver test5.sol  solver test6  solver test6.sol  solver test7
